--- a/src/assets/css/revel.css
+++ b/src/assets/css/revel.css
@@ -572,6 +572,7 @@ input[type="number"]::-webkit-inner-spin-button {
     position: relative;
     background-color: #fff;
     border-bottom: 1px solid #DFDFDF;
+    justify-content: center;
 }
 
 .stepper .nav-link {
@@ -999,6 +1000,26 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .font-18 {
     font-size: 18px !important;
+}
+.font-12 {
+    font-size: 12px !important;
+}
+
+.active-btn {
+    color: #13aa52;
+    margin-top: 15px;
+    font-weight: 600;
+    /* padding: 7px 0px; */
+    background-color: #b7e5ca;
+    border-radius: 5px;
+    text-align: left;
+    min-width: 150px;
+}
+
+.active-btn:hover {
+    color: #13aa52;
+    background-color: #b7e5ca;
+
 }
 
 .search-form i {
